<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_text_no_account">Нет аккаунта?</string>
    <string name="login_button_register">Регистрация</string>
    <string name="login_title">Вход</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Пароль</string>
    <string name="login_hint_password">Введите пароль</string>
    <string name="login_button_login">Вход</string>
    <string name="login_button_forgot_password">Забыл пароль</string>
    <string name="login_hint_email_example">example@gmail.com</string>
</resources>